--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "node ./node_modules/vue-gh-pages/index.js"
+    "preview": "vite preview ",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "vue": "^3.2.25",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0",
