--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm run build --if-present
     
     - name: s3syc
-      uses: jakejarvis/s3-sync-action@v0.5.1
+      uses: jakejarvis/s3-sync-action@master
       with: 
         args: --delete
       env: 
@@ -40,7 +40,7 @@ jobs:
         AWS_REGION: 'us-east-1'
         SOURCE_DIS: 'dist'
     - name: Invalidate Cloudfront
-      uses: chetan/invalidate-cloudfront-action@1.3
+      uses: chetan/invalidate-cloudfront-action@v2
       env:
         DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
         PATH: '/*'
